gtkpod V0.99.5CVS

       IMPROVEMENT: handle multiple calendar and task files in
       sync-evocalendar script. Thanks to Michele C. Soccio

gtkpod V0.99.4

       BUGFIX: Options for exporting playlist files could not be
       changed.

       BUGFIX: Fixed segfault when updating tracks or directories with
       artowrk present.

       BUGFIX: Browse button for "Sync Notes Script" opened a
       directory browser instead of a file browser.

       BUGFIX: Writing ID3v2.4 tags in UTF8 did not always
       work. Thanks to 't0c' for the patch.

       BUGFIX: Context Menus for removing playlists from the iPod were
       not displayed. Thanks to 'rob/biffhero' for pointing this out.

gtkpod V0.99.2
       BUGFIX: Fix segfault when applying preferences.

       BUGFIX: Don't require libcurl (not actively used).

       UPDATE: Swedish translation catalog

       IMPROVEMENT: Allow export of multiple thunderbird address
       books (by naming the output filename).

gtkpod V0.99.0
       NEW: type-ahead search functionality. Thanks to Nick Piper,
       http://www.nickpiper.co.uk/ -- please note that the list view
       you want to search in needs to have keyboard focus. Selection
       of the search column is done by clicking anywhere inside the
       column.

       NEW: Handle Compilations decently. The compilation mp3 tag is
       read and written, and compilation artists can be grouped into
       "Compilations" in the Artist filter tab. Thanks to Iain Benson!

       NEW: Window for edit of track details, including functionality
       to set thumbnails. The thumbnails are not stored as tags in the
       file as iTunes does it. Instead, the original filename is
       stored.

       NEW: Display and setting/removing of thumbnail images. Choose
       "Show Details" from the context menu (right mouse-button). New
       thumbnails are displayed by the iPod but get wiped by iTunes,
       however.
